test: add backend tests